Changelog
=========

1.0b2 (2009-02-04)
------------------

- Fix duplicate entries in quick installer.
  [davisagli]

- Handle non-structural folders correctly.
  [davisagli]


1.0b1 (2009-02-03)
------------------

- Initial release.
  [davisagli]