@@ -8,15 +8,23 @@
 .carousel-banner {
     position: absolute;
 }
-a.carousel-title:link, a.carousel-title:visited {
-    font-size: 1.5em;
+a.carousel-button {
     display: block;
     text-decoration: none;
     margin: 0 1em;
     padding: 1em 0;
 }
-a.carousel-title.selected:link, a.carousel-title.selected:visited {
-    font-weight: bold;
+a.carousel-button.selected {
     border-top: solid 1px #eee;
     border-bottom: solid 1px #eee;
+}
+.carousel-title {
+    display: block;
+    font-size: 1.5em;
+}
+a.carousel-button.selected .carousel-title {
+    font-weight: bold;
+}
+.carousel-description {
+    display: block;
 }
